<resources>
    <string name="app_name">DataManager</string>

    <!--main-->
    <string name="main_data_btn_text">Data</string>
    <string name="main_config_btn_text">Config</string>

    <!--config-->
    <string name="config_name">Config</string>
    <string name="config_pin_save_btn_text">Save</string>

    <!--data-->
    <string name="data_name">Data</string>
    <string name="data_list_title_text">Data</string>
    <string name="data_list_add_btn_text">Add</string>
    <string name="data_details_title_text">New data</string>
    <string name="data_details_title_edit_text_hint">Title</string>
    <string name="data_details_text_edit_text_hint">Text</string>
    <string name="data_details_pin_check_box_text">PIN</string>
    <string name="data_details_save_btn_text">Save</string>
    <string name="data_details_delete_btn_text">Delete</string>

    <!--pin-->
    <string name="pin_name">PIN</string>
    <string name="pin_confirm_btn_text">OK</string>

    <string name="pin_text">PIN:</string>
    <string name="pin_del_btn_text">Del</string>
    <string name="pin_0_btn_text">0</string>
    <string name="pin_1_btn_text">1</string>
    <string name="pin_2_btn_text">2</string>
    <string name="pin_3_btn_text">3</string>
    <string name="pin_4_btn_text">4</string>
    <string name="pin_5_btn_text">5</string>
    <string name="pin_6_btn_text">6</string>
    <string name="pin_7_btn_text">7</string>
    <string name="pin_8_btn_text">8</string>
    <string name="pin_9_btn_text">9</string>

</resources>
